{
  "version": 4,
  "terraform_version": "1.5.7",
  "serial": 186,
  "lineage": "5a2f869d-097d-971a-4b3f-b6d4dc14ffad",
  "resources": [
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:134875421691:security-group/sg-02a59fe721f30e1f4",
            "description": "EKS cluster security group",
            "egress": [],
            "id": "sg-02a59fe721f30e1f4",
            "ingress": [],
            "name": "devops-project-cluster-cluster-2026022704554967270000000d",
            "name_prefix": "devops-project-cluster-cluster-",
            "owner_id": "134875421691",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "devops-project-cluster-cluster",
              "Project": "devops-project"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "devops-project-cluster-cluster",
              "Project": "devops-project"
            },
            "timeouts": null,
            "vpc_id": "vpc-087b2d7949b00d894"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:134875421691:security-group/sg-00040a57dd9b89e56",
            "description": "EKS node shared security group",
            "egress": [],
            "id": "sg-00040a57dd9b89e56",
            "ingress": [],
            "name": "devops-project-cluster-node-2026022704554902640000000a",
            "name_prefix": "devops-project-cluster-node-",
            "owner_id": "134875421691",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "devops-project-cluster-node",
              "Project": "devops-project",
              "kubernetes.io/cluster/devops-project-cluster": "owned"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "devops-project-cluster-node",
              "Project": "devops-project",
              "kubernetes.io/cluster/devops-project-cluster": "owned"
            },
            "timeouts": null,
            "vpc_id": "vpc-087b2d7949b00d894"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "ingress_nodes_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node groups to cluster API",
            "from_port": 443,
            "id": "sgrule-3790376709",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-02a59fe721f30e1f4",
            "security_group_rule_id": "sgr-0a5778f5219e4ff19",
            "self": false,
            "source_security_group_id": "sg-00040a57dd9b89e56",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "egress_all",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow all egress",
            "from_port": 0,
            "id": "sgrule-3853657717",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-00040a57dd9b89e56",
            "security_group_rule_id": "sgr-0b3161cb404896625",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node groups",
            "from_port": 443,
            "id": "sgrule-4177009613",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-00040a57dd9b89e56",
            "security_group_rule_id": "sgr-0fc03af7206bcda17",
            "self": false,
            "source_security_group_id": "sg-02a59fe721f30e1f4",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_4443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 4443/tcp webhook",
            "from_port": 4443,
            "id": "sgrule-3682197941",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-00040a57dd9b89e56",
            "security_group_rule_id": "sgr-074fffb5e9fe24c92",
            "self": false,
            "source_security_group_id": "sg-02a59fe721f30e1f4",
            "timeouts": null,
            "to_port": 4443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_6443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 6443/tcp webhook",
            "from_port": 6443,
            "id": "sgrule-305890851",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-00040a57dd9b89e56",
            "security_group_rule_id": "sgr-094e04f0e61353eab",
            "self": false,
            "source_security_group_id": "sg-02a59fe721f30e1f4",
            "timeouts": null,
            "to_port": 6443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_8443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 8443/tcp webhook",
            "from_port": 8443,
            "id": "sgrule-23575042",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-00040a57dd9b89e56",
            "security_group_rule_id": "sgr-00384cd528dc31416",
            "self": false,
            "source_security_group_id": "sg-02a59fe721f30e1f4",
            "timeouts": null,
            "to_port": 8443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_9443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 9443/tcp webhook",
            "from_port": 9443,
            "id": "sgrule-1707510217",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-00040a57dd9b89e56",
            "security_group_rule_id": "sgr-0afed61be738e4334",
            "self": false,
            "source_security_group_id": "sg-02a59fe721f30e1f4",
            "timeouts": null,
            "to_port": 9443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_kubelet",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node kubelets",
            "from_port": 10250,
            "id": "sgrule-3667000646",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-00040a57dd9b89e56",
            "security_group_rule_id": "sgr-0033faa6b3c45d143",
            "self": false,
            "source_security_group_id": "sg-02a59fe721f30e1f4",
            "timeouts": null,
            "to_port": 10250,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_nodes_ephemeral",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node ingress on ephemeral ports",
            "from_port": 1025,
            "id": "sgrule-2877680385",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-00040a57dd9b89e56",
            "security_group_rule_id": "sgr-0f32d1a2a7c988edf",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 65535,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_self_coredns_tcp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS",
            "from_port": 53,
            "id": "sgrule-1279891563",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-00040a57dd9b89e56",
            "security_group_rule_id": "sgr-0324517b19019f89e",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_self_coredns_udp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS UDP",
            "from_port": 53,
            "id": "sgrule-3893771140",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "udp",
            "security_group_id": "sg-00040a57dd9b89e56",
            "security_group_rule_id": "sgr-07a4d245655341b80",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:134875421691:network-acl/acl-045ebe3e70fc679ad",
            "default_network_acl_id": "acl-045ebe3e70fc679ad",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-045ebe3e70fc679ad",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "134875421691",
            "subnet_ids": [
              "subnet-00fe16210cba6e609",
              "subnet-02c9285edecac24c3",
              "subnet-085ff4cf13700e06c",
              "subnet-09b2f28934c928695"
            ],
            "tags": {
              "Environment": "dev",
              "Name": "devops-project-vpc-default",
              "Project": "devops-project"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "devops-project-vpc-default",
              "Project": "devops-project"
            },
            "vpc_id": "vpc-087b2d7949b00d894"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:134875421691:route-table/rtb-0945e82206066b6ca",
            "default_route_table_id": "rtb-0945e82206066b6ca",
            "id": "rtb-0945e82206066b6ca",
            "owner_id": "134875421691",
            "propagating_vgws": null,
            "route": [],
            "tags": {
              "Environment": "dev",
              "Name": "devops-project-vpc-default",
              "Project": "devops-project"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "devops-project-vpc-default",
              "Project": "devops-project"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-087b2d7949b00d894"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:134875421691:security-group/sg-09df73979fa4d0776",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-09df73979fa4d0776",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "134875421691",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "devops-project-vpc-default",
              "Project": "devops-project"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "devops-project-vpc-default",
              "Project": "devops-project"
            },
            "vpc_id": "vpc-087b2d7949b00d894"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-096f705615134cc74",
            "arn": "arn:aws:ec2:ca-central-1:134875421691:elastic-ip/eipalloc-096f705615134cc74",
            "domain": "vpc",
            "id": "eipalloc-096f705615134cc74",
            "network_border_group": "ca-central-1",
            "public_dns": "ec2-16-52-5-95.ca-central-1.compute.amazonaws.com",
            "public_ip": "16.52.5.95",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "dev",
              "Name": "devops-project-vpc-ca-central-1a",
              "Project": "devops-project"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "devops-project-vpc-ca-central-1a",
              "Project": "devops-project"
            },
            "vpc": true
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:134875421691:internet-gateway/igw-0d7b2c0fde9cd34d9",
            "id": "igw-0d7b2c0fde9cd34d9",
            "owner_id": "134875421691",
            "tags": {
              "Environment": "dev",
              "Name": "devops-project-vpc",
              "Project": "devops-project"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "devops-project-vpc",
              "Project": "devops-project"
            },
            "vpc_id": "vpc-087b2d7949b00d894"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-096f705615134cc74",
            "association_id": "eipassoc-067d241bac1b76b73",
            "connectivity_type": "public",
            "id": "nat-0eee1258262151078",
            "network_interface_id": "eni-02a3de0d88ebb7cc5",
            "private_ip": "10.0.3.238",
            "public_ip": "16.52.5.95",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-02c9285edecac24c3",
            "tags": {
              "Environment": "dev",
              "Name": "devops-project-vpc-ca-central-1a",
              "Project": "devops-project"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "devops-project-vpc-ca-central-1a",
              "Project": "devops-project"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0cebbb5c7cf3ba21a1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0eee1258262151078",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0cebbb5c7cf3ba21a",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0d7b2c0fde9cd34d9",
            "id": "r-rtb-0967abed60dcb331f1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0967abed60dcb331f",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:134875421691:route-table/rtb-0cebbb5c7cf3ba21a",
            "id": "rtb-0cebbb5c7cf3ba21a",
            "owner_id": "134875421691",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "dev",
              "Name": "devops-project-vpc-private",
              "Project": "devops-project"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "devops-project-vpc-private",
              "Project": "devops-project"
            },
            "timeouts": null,
            "vpc_id": "vpc-087b2d7949b00d894"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:134875421691:route-table/rtb-0967abed60dcb331f",
            "id": "rtb-0967abed60dcb331f",
            "owner_id": "134875421691",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "dev",
              "Name": "devops-project-vpc-public",
              "Project": "devops-project"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "devops-project-vpc-public",
              "Project": "devops-project"
            },
            "timeouts": null,
            "vpc_id": "vpc-087b2d7949b00d894"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0937bad4879856136",
            "route_table_id": "rtb-0cebbb5c7cf3ba21a",
            "subnet_id": "subnet-00fe16210cba6e609"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0fc3d76242b96d0c1",
            "route_table_id": "rtb-0cebbb5c7cf3ba21a",
            "subnet_id": "subnet-085ff4cf13700e06c"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e7a21f00885f1fb2",
            "route_table_id": "rtb-0967abed60dcb331f",
            "subnet_id": "subnet-02c9285edecac24c3"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e778a2471d49bcf6",
            "route_table_id": "rtb-0967abed60dcb331f",
            "subnet_id": "subnet-09b2f28934c928695"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:134875421691:subnet/subnet-00fe16210cba6e609",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ca-central-1a",
            "availability_zone_id": "cac1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00fe16210cba6e609",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "134875421691",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "devops-project-vpc-private-ca-central-1a",
              "Project": "devops-project"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "devops-project-vpc-private-ca-central-1a",
              "Project": "devops-project"
            },
            "vpc_id": "vpc-087b2d7949b00d894"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:134875421691:subnet/subnet-085ff4cf13700e06c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ca-central-1b",
            "availability_zone_id": "cac1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-085ff4cf13700e06c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "134875421691",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "devops-project-vpc-private-ca-central-1b",
              "Project": "devops-project"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "devops-project-vpc-private-ca-central-1b",
              "Project": "devops-project"
            },
            "vpc_id": "vpc-087b2d7949b00d894"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:134875421691:subnet/subnet-02c9285edecac24c3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ca-central-1a",
            "availability_zone_id": "cac1-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02c9285edecac24c3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "134875421691",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "devops-project-vpc-public-ca-central-1a",
              "Project": "devops-project"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "devops-project-vpc-public-ca-central-1a",
              "Project": "devops-project"
            },
            "vpc_id": "vpc-087b2d7949b00d894"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:134875421691:subnet/subnet-09b2f28934c928695",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ca-central-1b",
            "availability_zone_id": "cac1-az2",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09b2f28934c928695",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "134875421691",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "devops-project-vpc-public-ca-central-1b",
              "Project": "devops-project"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "devops-project-vpc-public-ca-central-1b",
              "Project": "devops-project"
            },
            "vpc_id": "vpc-087b2d7949b00d894"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:134875421691:vpc/vpc-087b2d7949b00d894",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-045ebe3e70fc679ad",
            "default_route_table_id": "rtb-0945e82206066b6ca",
            "default_security_group_id": "sg-09df73979fa4d0776",
            "dhcp_options_id": "dopt-0229478ad7deca75f",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-087b2d7949b00d894",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0945e82206066b6ca",
            "owner_id": "134875421691",
            "tags": {
              "Environment": "dev",
              "Name": "devops-project-vpc",
              "Project": "devops-project"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "devops-project-vpc",
              "Project": "devops-project"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}